data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1295.wast
;; 6. **Test for Loop with Embedded `if-else` and `br` Instructions**:    Design a loop containing an `if-else` construct. Include a `br` in the `else` that targets the loop. Ensure the branching does not mistakenly exit the loop structure.    - **Constraint**: Validate loop scoping is maintained despite nested branching constructs.    - **Expectation**: Branch targets must respect the loop’s scope continuously.

(assert_invalid
  (module
    (func $loop_with_nested_if (result i32)
      (loop (result i32)
        (block (result i32)
          (i32.const 1)
          (if (result i32)
            (i32.const 1)
            (then (i32.const 42))
            (else (br 1))
          )
        )
      )
    )
  )
  "type mismatch"
)